--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,12 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 20.10.6
-      - run: ctlptl create cluster kind --registry=ctlptl-registry && ./test.sh
+      - run:
+          name: Install Docker Compose
+          environment:
+            COMPOSE_VERSION: '1.29.2'
+          command: |
+            curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            chmod +x ~/docker-compose
+            mv ~/docker-compose /usr/local/bin/docker-compose
+      - run: ./test.sh
