--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,19 @@ services:
     container_name: cache
     expose:
       - 6379
-  app:
-    image: tilt.dev/express-redis-app
-    links:
-      - redis
-    ports:
-      - 3000:3000
-    environment:
-      - REDIS_URL=redis://cache
-      - NODE_ENV=development
-      - PORT=3000
-    command:
-      sh -c 'node server.js'
-
+    networks:
+      - database
+  # app:
+  #   image: tilt.dev/express-redis-app
+  #   links:
+  #     - redis
+  #   ports:
+  #     - 3000:3000
+  #   environment:
+  #     - REDIS_URL=redis://cache
+  #     - NODE_ENV=development
+  #     - PORT=3000
+  #   command:
+  #     sh -c 'node server.js'
+networks:
+  database:
