--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   redis:
     image: redis
     container_name: cache
+    ports:
+      - "6379:6379"
     expose:
       - 6379
     networks:
