Define config to run in DC-only or DC+K8s modes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,17 @@ services:
       - 6379
     networks:
       - database
-  # app:
-  #   image: tilt.dev/express-redis-app
-  #   links:
-  #     - redis
-  #   ports:
-  #     - 3000:3000
-  #   environment:
-  #     - REDIS_URL=redis://cache
-  #     - NODE_ENV=development
-  #     - PORT=3000
-  #   command:
-  #     sh -c 'node server.js'
+  app:
+    image: tilt.dev/express-redis-app
+    ports:
+      - 3000:3000
+    environment:
+      - REDIS_URL=redis://cache
+      - NODE_ENV=development
+      - PORT=3000
+    command:
+      sh -c 'node server.js'
+    networks:
+      - database
 networks:
   database:
