--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,14 @@ jobs:
 
     steps:
       - checkout
-      - setup_remote_docker:
-          version: 20.10.6
+      - setup_remote_docker
       - run:
           name: Install Docker Compose
           environment:
-            COMPOSE_VERSION: '1.29.2'
+            COMPOSE_VERSION: 'v2.25.0'
           command: |
-            curl -L "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            curl -sSL "https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/docker-compose
+            mkdir -p ~/.docker/cli-plugins
             chmod +x ~/docker-compose
-            mv ~/docker-compose /usr/local/bin/docker-compose
+            mv ~/docker-compose ~/.docker/cli-plugins/docker-compose
       - run: ./test.sh
